--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        <div>
+            <p>Changes Made for fetch req</p>
+        </div>
         
         <script src="" async defer></script>
     </body>
